tests/snapshots/structure__default__pass__package_bin_target.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure

STDERR:

STDOUT:

crate package_bin_target
└── fn main: pub(crate)
