tests/snapshots/structure__default__pass__package_lib_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure

STDERR:

STDOUT:

crate package_lib_target
