tests/snapshots/structure__default__pass__workspace_single_package_bin_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure

STDERR:

STDOUT:

crate package_bin_target
└── fn main: pub(crate)
