tests/snapshots/structure__default__pass__workspace_single_package_lib_target.snap
---
source: tests/structure.rs
expression: output
snapshot_kind: text
---
COMMAND:
structure

STDERR:

STDOUT:

crate package_lib_target
